<resources>
    <string name="app_name">Home control</string>
    <string name="title_home">Home</string>
    <string name="title_relays">Relays</string>
    <string name="title_automation">Automation</string>
    <string name="title_graphs">Graphs</string>

    <string name="home">Home</string>
    <string name="garden">Garden</string>
    <string name="cellar">Cellar</string>
    <string name="attic">Attic</string>
    <string name="tahanovce">Tahanovce</string>
    <string name="title_activity_automation_config">Configuration</string>
    <string name="title_vent">Ventilation</string>
    <string name="title_dryout">Dryout</string>

    <!--DAYTIME-->
    <string name="Hour">Hour</string>
    <string name="hours">hours</string>
    <string name="Week">Week</string>
    <string name="Day">Day</string>
    <string name="days">days</string>
    <string name="Month">Month</string>

    <!--SENSORS-->
    <string name="time">Time</string>
    <string name="temp">Temperature</string>
    <string name="hum">Humidity</string>
    <string name="dewPoint">Dew point</string>
    <string name="vaporPressure">Vapor pressure</string>
    <string name="depth">Depth</string>
    <string name="temp_indoor">Indoor temperature</string>
    <string name="temp_cellar">Cellar temperature</string>
    <string name="temp_outdoor">Outdoor temperature</string>
    <string name="dew_difference">Dew point difference</string>
    <string name="batt_v">Battery voltage</string>
    <string name="batt_s">Battery status</string>

    <!--RELAYS-->
    <string name="Darling">Darling</string>
    <string name="Pump">Pump</string>
    <string name="Light">Light</string>
    <string name="Fan">Fan</string>
    <string name="EVd">EVd</string>
    <string name="Dryer">Dryer</string>
    <string name="Boiler">Boiler</string>

    <string name="Ventilation">Ventilation</string>
    <string name="Dryout">Dryout</string>

    <!--CODES-->
    <string name="saved">Saved</string>

    <string name="relay_enabled">Enabled</string>
    <string name="relay_disabled">Disabled</string>

    <string name="stat_conn">Connected</string>
    <string name="stat_err">Error</string>
    <string name="stat_disconn">Disconnected</string>
    <string name="stat_no_data">No data received</string>
    <string name="stat_already_connected">Multiple connections | (resubscribing)</string>

    <!--AUTOMATION-->
    <string name="fan_on_time">Fan on time</string>
    <string name="fan_off_time">Fan off time</string>
    <string name="fan_dew_threshold">Fan dew threshold</string>
    <string name="fan_min_temp">Fan min temp</string>

    <string name="dryer_on_time">Dryer on time</string>
    <string name="dryer_threshold">Dryer threshold</string>

    <!-- OTHER -->
    <string name="degrees_centigrade" translatable="false">°C</string>
    <string name="msg_token_fmt">Token ID: %s</string>
    <string name="unknown">Unknown</string>
</resources>
