<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GraphFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:gravity="bottom"
            android:padding="8dp"
            android:text="@string/attic"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/graphAttic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:gravity="bottom"
            android:layout_marginTop="30dp"
            android:padding="8dp"
            android:text="@string/garden"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/graphGarden"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="bottom"
            android:padding="8dp"
            android:text="@string/cellar"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/graphCellar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="bottom"
            android:padding="8dp"
            android:text="@string/tahanovce"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/graphTahanovce"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </RelativeLayout>

        <TextView
            android:id="@+id/graphUnknownTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="bottom"
            android:padding="8dp"
            android:text="@string/unknown"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/graphUnknown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </RelativeLayout>

    </LinearLayout>

</ScrollView>