<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".fragments.configs.VentilationFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="bottom"
        android:padding="8dp"
        android:text="@string/title_vent"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/symbol"
            android:gravity="center_vertical"
            android:text="@string/temp_cellar"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/symbol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/editText"
            android:gravity="center_vertical|end"
            android:text="&gt;" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:width="100dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal|numberSigned"
            android:paddingRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/degrees_centigrade" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="#36393c" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/symbol1"
            android:gravity="center_vertical"
            android:text="@string/temp_outdoor"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/symbol1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/editText1"
            android:gravity="center_vertical|end"
            android:text="&gt;" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:width="100dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal|numberSigned"
            android:paddingRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/degrees_centigrade" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="#36393c" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/symbol2"
            android:gravity="center_vertical"
            android:text="@string/dew_difference"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/symbol2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/editText2"
            android:gravity="center_vertical|end"
            android:text="&gt;" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:width="100dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal|numberSigned"
            android:paddingRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/degrees_centigrade" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="#36393c" />

    </RelativeLayout>

</LinearLayout>